--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#317EFB"/>
+    <!-- <meta name="theme-color" content="#317EFB"/> -->
     <title>Suvrajit | Portfolio</title>
-    <link rel="manifest" href="manifest/manifest.webmanifest">
+    <!-- <link rel="manifest" href="manifest/manifest.webmanifest"> -->
     <link rel="shortcut icon" href="favicon_io/favicon.ico">
   </head>
   <body>
